--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "exaggerated-weather-api",
+  "name": "doomcast-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.21.2"
   }
